# ECO6800_FINAL-PROJECT_CREDIT-RISK-ANALYSIS

./: .gitignore  AI_USAGE_LOG.md  CHARTER.md  Charter  Data  README.md  lc_loan.csv  main.py  pyproject.toml  report.md  requirements.txt
codes/: EDA.py  model.py  pre_processing.py  scorecard_artifacts.pkl  woe2.py
data/: raw_data_link.md
data/fallback/: lc_loan.csv
grading_feedback/: milestone_feedback.md
outputs/: baseline_metric.json  milestone_manifest.json  primary_metric.json  scorecard_comparison.csv
outputs/artifacts/: woe_tables.pkl
outputs/tables/: final_scorecard.csv  grade_default_rates.csv  iv_summary.csv  woe_bins.csv
scripts/: probe_data.py
src/: EDA.py  score_card.py  score_new_loans.py  woe2.py
src/eco6800_credit_risk_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
