[project]
name = "eco6800-credit-risk-analysis"
version = "0.1.0"
requires-python = ">=3.10,<3.13"    # ← restrict to stable Python
dependencies = [
    "numpy>=1.26,<2.0",             # ← pin numpy to stable version
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.43",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
